<resources>
    <string name="app_name">HomeApp</string>
    <string name="login_or_email">Login or e-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Powtórz Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="not_registered">You don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgotten_password">Nie pamiętasz hasła?</string>
    <string name="remind_password">Remind password</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="account">Posiadasz konto?</string>
    <string name="log_in_btn">Login</string>
    <string name="login_successful">Login successful</string>
    <string name="task_name">Task name</string>
    <string name="task_date">Date (optional)</string>
    <string name="task_for">For:</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="group">Group</string>
    <string name="deadline">Deadline</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="show_homework_only">Show homework only</string>
    <string name="show_purchases_only">Show purchases only</string>
    <string name="archives">Archives</string>
    <string name="logout">Logout</string>
    <string name="logged_out">Logged Out</string>

    <string-array name="tasks_types">
        <item name="homework">Homework</item>
        <item name="shopping">Shopping</item>
    </string-array>

    <string name="register_successful">You have registered</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="password_field_empty">Password field is empty</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="confirmed_password_incorrect">Confirmed password incorrect</string>
    <string name="user_already_exist">Username already exist</string>
    <string name="login_field_empty">Login field is empty</string>
    <string name="email_field_empty">Email field is empty</string>
    <string name="login_not_match">Login must start with a letter, end with a letter or digit
        and must be shorter than 19</string>
    <string name="email_not_match">Email is incorrect</string>
    <string name="password_not_match">Password must have one letter, one digit and can\'t
        be shorter than 6 characters</string>
    <string name="empty_credentials">Empty credentials!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="user_profile">User profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="details">Details</string>

</resources>
