<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".loginAndRegister.LoginActivity">

    <EditText
        android:id="@+id/etxt_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:autofillHints="@string/login_or_email"
        android:drawableStart="@drawable/ic_baseline_person_26"
        android:gravity="center_horizontal"
        android:hint="@string/e_mail"
        android:inputType="text|textEmailAddress" />

    <EditText
        android:id="@+id/etxt_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_26"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:text="@string/register"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/forgotten_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:text="@string/remind_password"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>