<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_baseline_group_26"
            android:title="@string/group"
            android:onClick="startGroupActivity"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_baseline_mail_26"
            android:title="Invitation"
            android:onClick="startInvitationActivity"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_26"
            android:title="@string/user_profile"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_log_out_26"
            android:title="@string/logout"
            android:onClick="logout"
            android:checkable="false"/>
    </group>
</menu>