<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_row_task_archives"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_row="0"
    android:layout_rowWeight="1"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_marginBottom="1dp"
    android:elevation="8dp">

    <LinearLayout
        android:id="@+id/ll_row_task_archives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/txt_archives_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/mainDarkGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_archives_task_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textColor="@color/mainLightGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_archives_task_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User name"
            android:textColor="@color/mainLightGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_archives_task_done_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textColor="@color/mainLightGrey"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>