<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".views.groupView.createGroup.CreateGroupActivity">

    <EditText
        android:id="@+id/group_name_etxt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/group_name"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_group_icon"
        android:drawablePadding="12dp"
        android:hint="@string/group_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:textColor="@color/colorBasicText"
        android:textCursorDrawable="@null"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/group_description_etxt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/group_name_etxt"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/group_description"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_short_text_icon"
        android:drawablePadding="12dp"
        android:hint="@string/group_description"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/colorBasicText"
        android:textCursorDrawable="@null"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/save_group_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="@color/mainDarkGreen"
        android:textSize="18sp" />

</RelativeLayout>