<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".views.addingTasksViews.AddTaskActivity">

    <EditText
        android:id="@+id/id_task_name_etxt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/task_name"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_baseline_add_task_26"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:hint="@string/task_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorBasicText"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/id_task_deadline_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_task_name_etxt"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/task_date"
        android:backgroundTint="@color/colorBasicText"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:hint="@string/task_date"
        android:maxLines="1"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_26" />

    <CheckBox
        android:id="@+id/id_task_notification_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_task_deadline_txt"
        android:layout_marginTop="20dp"
        android:background="@drawable/checkbox_selector"
        android:button="@null"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/id_task_notification_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/id_task_type_spinner"
        android:layout_below="@id/id_task_deadline_txt"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/id_task_notification_checkbox"
        android:gravity="center_vertical"
        android:text="Send notification"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/id_task_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_task_notification_checkbox"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txt_task_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_task_type_spinner"
        android:layout_marginTop="20dp"
        android:text="@string/task_for"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/id_select_all_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_task_type_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/select_all"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_check_26" />

    <FrameLayout
        android:id="@+id/id_task_owners_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_save_task_btn"
        android:layout_below="@id/txt_task_owner"
        android:layout_marginTop="10dp"
        android:background="@drawable/activity_add_custom" />

    <Button
        android:id="@+id/id_save_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:textColor="@color/mainDarkGreen"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</RelativeLayout>