<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".views.addingTasksViews.AddTaskActivity">

    <EditText
        android:id="@+id/etxt_update_task_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/task_name"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_baseline_add_task_26"
        android:drawablePadding="12dp"
        android:hint="@string/task_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:textColor="@color/colorBasicText"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_update_task_deadline"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/etxt_update_task_name"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/task_date"
        android:backgroundTint="@color/colorBasicText"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:hint="@string/task_date"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_26"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/iv_delete_date_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="108dp"
        android:src="@drawable/ic_baseline_close_26"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_notification_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/txt_update_task_deadline"
        android:gravity="center_vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/chbox_update_task_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/checkbox_selector"
            android:button="@null"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_update_task_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Send notification"
            android:textColor="@color/colorBasicText"
            android:textSize="18sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spin_update_task_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_notification_update"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/id_update_task_owner_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spin_update_task_type"
        android:layout_marginTop="20dp"
        android:text="@string/task_for"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_update_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spin_update_task_type"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/select_all"
        android:textColor="@color/colorBasicText"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_check_26" />

    <FrameLayout
        android:id="@+id/container_update_task_owners"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_task_update"
        android:layout_below="@id/id_update_task_owner_txt"
        android:layout_marginTop="10dp"
        android:background="@drawable/activity_add_custom" />

    <Button
        android:id="@+id/btn_task_update"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/update" />

</RelativeLayout>