<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".views.groupView.createGroup.CreateGroupActivity">

    <EditText
        android:id="@+id/etxt_group_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/group_name"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_group_icon"
        android:drawablePadding="12dp"
        android:maxLength="50"
        android:hint="@string/group_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:textColor="@color/colorBasicText"
        android:textCursorDrawable="@null"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etxt_group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etxt_group_name"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/group_description"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="12dp"
        android:gravity="top|start"
        android:hint="@string/group_description"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="8"
        android:maxLines="8"
        android:maxLength="300"
        android:padding="12dp"
        android:scrollHorizontally="false"
        android:textColor="@color/colorBasicText"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/btn_save_group"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/etxt_group_description"
        android:layout_alignParentEnd="true"
        android:text="@string/save"
        android:textColor="@color/mainDarkGreen"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_title_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save_group"
        android:text="Members"
        android:textColor="@color/colorBasicText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title_members"
        android:padding="12dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_members_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</RelativeLayout>